# docs-discussion

./: .env.sample  .gitignore  README.md  bot.py  chainlit.md  ingest.py  main.py  pyproject.toml  requirements.txt  scrape.py
.chainlit/: config.toml
